--- a/devel/p5-File-HomeDir/Makefile
+++ b/devel/p5-File-HomeDir/Makefile
@@ -1,14 +1,18 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/02/27 12:44:17 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2007/05/27 20:47:07 heinz Exp $
 #
 
 DISTNAME=		File-HomeDir-0.64
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		devel perl5
-MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=../../authors/id/A/AD/ADAMK/}
+MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=File/}
 
 MAINTAINER=		bartosz@atom.eu.org
 HOMEPAGE=		http://search.cpan.org/dist/File-HomeDir/
 COMMENT=		Get the home directory for yourself or other users
+
+PKG_DESTDIR_SUPPORT=	user-destdir
+
+USE_LANGUAGES=		# empty
 
 PERL5_PACKLIST=		auto/File/HomeDir/.packlist
 
