--- a/devel/monotone/Makefile
+++ b/devel/monotone/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.37 2007/05/13 10:45:19 jmmv Exp $
+# $NetBSD: Makefile,v 1.38 2007/05/28 08:13:25 dan Exp $
 #
 
 DISTNAME=	monotone-0.35
@@ -8,6 +8,8 @@ MASTER_SITES=	http://monotone.ca/downloads/0.35/
 MAINTAINER=	jmmv@NetBSD.org
 HOMEPAGE=	http://monotone.ca/
 COMMENT=	Free distributed version control system
+
+PKGREVISION=	1
 
 GCC_REQD+=		3.0
 GNU_CONFIGURE=		yes
