--- a/textproc/p5-Encode-Detect/Makefile
+++ b/textproc/p5-Encode-Detect/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/03/24 19:53:11 heinz Exp $
+# $NetBSD: Makefile,v 1.2 2007/05/28 15:32:51 heinz Exp $
 #
 
 DISTNAME=		Encode-Detect-1.00
@@ -10,6 +10,7 @@ MAINTAINER=		hiramatu@boreas.dti.ne.jp
 HOMEPAGE=		http://search.cpan.org/dist/Encode-Detect/
 COMMENT=		Perl module that detects the encoding of data
 
+PKG_DESTDIR_SUPPORT=	user-destdir
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 BUILD_DEPENDS+=		p5-ExtUtils-CBuilder-[0-9]*:../../devel/p5-ExtUtils-CBuilder
