--- a/graphics/ps2eps/Makefile
+++ b/graphics/ps2eps/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/04/08 22:55:40 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2007/05/28 23:18:52 heinz Exp $
 
 DISTNAME=	ps2eps-1.58
 CATEGORIES=	graphics
@@ -8,6 +8,8 @@ EXTRACT_SUFX=	.zip
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://www.tm.uka.de/~bless/ps2eps
 COMMENT=	Tool for generating EPS Format files from one-page PS documents
+
+PKG_DESTDIR_SUPPORT=	user-destdir
 
 USE_TOOLS+=	perl:run
 WRKSRC=		${WRKDIR}/ps2eps
@@ -20,9 +22,9 @@ do-build:
 	cd ${WRKSRC:Q}/src/C && ${CC} ${CFLAGS} -o bbox bbox.c
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC:Q}/src/C/bbox ${PREFIX:Q}/bin
-	${INSTALL_SCRIPT} ${WRKSRC:Q}/bin/ps2eps ${PREFIX:Q}/bin
+	${INSTALL_PROGRAM} ${WRKSRC:Q}/src/C/bbox ${DESTDIR:Q}${PREFIX:Q}/bin
+	${INSTALL_SCRIPT} ${WRKSRC:Q}/bin/ps2eps ${DESTDIR:Q}${PREFIX:Q}/bin
 	${INSTALL_MAN} ${WRKSRC:Q}/doc/man/man1/*.1 \
-		${PREFIX:Q}/${PKGMANDIR:Q}/man1
+		${DESTDIR:Q}${PREFIX:Q}/${PKGMANDIR:Q}/man1
 
 .include "../../mk/bsd.pkg.mk"
