--- a/www/analog/Makefile
+++ b/www/analog/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.55 2007/02/22 19:27:18 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2007/05/29 09:03:12 tron Exp $
 
 DISTNAME=	analog-6.0
+PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	${HOMEPAGE} \
 		http://www.web42.com/analog/ \
