--- a/devel/psvn/Makefile
+++ b/devel/psvn/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/05/29 15:40:18 taca Exp $
+# $NetBSD: Makefile,v 1.2 2007/05/29 16:41:44 wiz Exp $
 #
 
 DISTNAME=	psvn.el
 PKGNAME=	psvn-${VER}
-CATEGORIES=	devel editors
+CATEGORIES=	devel editors scm
 MASTER_SITES=	http://www.xsteve.at/prg/emacs/
 DIST_SUBDIR=	psvn-${VER}
 EXTRACT_SUFX=	# empty
