Added support for installation to DESTDIR. Approved by Jim Wise.

--- a/x11/tk/Makefile
+++ b/x11/tk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.58 2007/01/02 11:03:11 joerg Exp $
+# $NetBSD: Makefile,v 1.59 2007/05/29 18:37:09 heinz Exp $
 
 DISTNAME=	tk${TK_VERSION}-src
 PKGNAME=	tk-${TK_VERSION}
@@ -11,6 +11,7 @@ COMMENT=	Graphical toolkit for TCL
 
 .include "../../x11/tk/Makefile.version"
 
+PKG_DESTDIR_SUPPORT=	user-destdir
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=			${WRKDIR}/tk${TK_VERSION}
@@ -37,39 +38,41 @@ SUBST_FILES.tk-config=	unix/tkConfig.sh
 SUBST_SED.tk-config+=	-e "s|${WRKSRC}/unix|${PREFIX}/lib|"
 SUBST_SED.tk-config+=	-e "s|${WRKSRC}|${PREFIX}/include/tk|"
 
-INSTALLATION_DIRS+=	${PREFIX}/include/tk
-INSTALLATION_DIRS+=	${PREFIX}/include/tk/generic
-INSTALLATION_DIRS+=	${PREFIX}/include/tk/unix
+INSTALLATION_DIRS+=	include/tk
+INSTALLATION_DIRS+=	include/tk/generic
+INSTALLATION_DIRS+=	include/tk/unix
+
+DESTDIRPREFIX=		${DESTDIR}${PREFIX}
 
 post-install:
-	rm -f ${PREFIX}/bin/wish
-	ln -s wish8.4 ${PREFIX}/bin/wish
-	${INSTALL_DATA} ${WRKSRC}/generic/default.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/ks_names.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tk.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tk3d.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkButton.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkCanvas.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkColor.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkDecls.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkFileFilter.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkFont.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkInitScript.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkInt.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkIntDecls.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkIntPlatDecls.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkIntXlibDecls.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkMenu.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkMenubutton.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkPlatDecls.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkPort.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkScale.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkScrollbar.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkSelect.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkText.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/generic/tkUndo.h ${PREFIX}/include/tk/generic
-	${INSTALL_DATA} ${WRKSRC}/unix/tkUnixDefault.h ${PREFIX}/include/tk/unix
-	${INSTALL_DATA} ${WRKSRC}/unix/tkUnixInt.h ${PREFIX}/include/tk/unix
-	${INSTALL_DATA} ${WRKSRC}/unix/tkUnixPort.h ${PREFIX}/include/tk/unix
+	rm -f ${DESTDIRPREFIX:Q}/bin/wish
+	ln -s wish8.4 ${DESTDIRPREFIX:Q}/bin/wish
+	${INSTALL_DATA} ${WRKSRC}/generic/default.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/ks_names.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tk.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tk3d.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkButton.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkCanvas.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkColor.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkDecls.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkFileFilter.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkFont.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkInitScript.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkInt.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkIntDecls.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkIntPlatDecls.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkIntXlibDecls.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkMenu.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkMenubutton.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkPlatDecls.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkPort.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkScale.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkScrollbar.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkSelect.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkText.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/generic/tkUndo.h ${DESTDIRPREFIX:Q}/include/tk/generic
+	${INSTALL_DATA} ${WRKSRC}/unix/tkUnixDefault.h ${DESTDIRPREFIX:Q}/include/tk/unix
+	${INSTALL_DATA} ${WRKSRC}/unix/tkUnixInt.h ${DESTDIRPREFIX:Q}/include/tk/unix
+	${INSTALL_DATA} ${WRKSRC}/unix/tkUnixPort.h ${DESTDIRPREFIX:Q}/include/tk/unix
 
 .include "../../mk/bsd.pkg.mk"
