--- a/print/teTeX3-texmf/Makefile
+++ b/print/teTeX3-texmf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2006/11/05 17:34:44 joerg Exp $
+# $NetBSD: Makefile,v 1.17 2007/05/30 00:26:22 minskim Exp $
 #
 
 DISTNAME=	tetex-texmf-3.0
@@ -21,6 +21,8 @@ NO_BUILD=	yes
 
 REPLACE_PERL+=	doc/generic/ruhyphen/reduce-patt doc/generic/ruhyphen/sorthyph
 # No dependency on Perl.
+CHECK_INTERPRETER_SKIP+=share/texmf-dist/doc/generic/ruhyphen/reduce-patt \
+			share/texmf-dist/doc/generic/ruhyphen/sorthyph
 REPLACE_SH+=	doc/latex/bibunits/bibtexall doc/latex/multibib/bibtexall
 USE_TOOLS+=	sh:run
 
