--- a/converters/jcode-perl/Makefile
+++ b/converters/jcode-perl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2007/05/29 01:06:31 schmonz Exp $
+# $NetBSD: Makefile,v 1.2 2007/05/30 05:50:04 schmonz Exp $
 
 DISTNAME=	jcode.pl-2.13
 PKGNAME=	${DISTNAME:S/jcode.pl/jcode-perl/}
@@ -6,11 +6,13 @@ SVR4_PKGNAME=	jcopl
 CATEGORIES=	japanese converters perl5
 MASTER_SITES=	ftp://ftp.iij.ad.jp/pub/IIJ/dist/utashiro/perl/ \
 		ftp://ftp.sra.co.jp/pub/lang/perl/sra-scripts/
-EXTRACT_SUFX=
+EXTRACT_SUFX=	# empty
 
 MAINTAINER=	tech-pkg-ja@jp.NetBSD.org
 HOMEPAGE=	http://www.srekcah.org/jcode/
 COMMENT=	Perl library for Japanese character code conversion
+
+CONFLICTS+=	p5-jcode-[0-9]*
 
 WRKSRC=			${WRKDIR}
 
