Revert previous, I was misreading the build report

--- a/graphics/netpbm/Makefile
+++ b/graphics/netpbm/Makefile
@@ -19,7 +19,7 @@ HOMEPAGE=	http://netpbm.sourceforge.net/
 COMMENT=	Toolkit for conversion of images between different formats
 LICENSE=	gnu-gpl-v2
 
-USE_TOOLS+=	gmake lex pax perl pkg-config
+USE_TOOLS+=	gmake lex pax perl
 USE_FEATURES=	snprintf
 
 INSTALL_TARGET=	install-dev install-run
