devel/p5-EV: backport fix from trunk.

--- a/devel/p5-EV/Makefile
+++ b/devel/p5-EV/Makefile
@@ -13,8 +13,13 @@ LICENSE=	${PERL5_LICENSE}
 
 DEPENDS+=	p5-common-sense-[0-9]*:../../devel/p5-common-sense
 
-MAKE_ENV+=		PERL_MM_USE_DEFAULT=1
-PERL5_PACKLIST=		auto/EV/.packlist
+MAKE_ENV+=	PERL_MM_USE_DEFAULT=1
+PERL5_PACKLIST=	auto/EV/.packlist
+
+OPSYSVARS+=	MAKE_ENV
+
+# Explicitly disable inotify on SunOS, assumes Linux statfs.
+MAKE_ENV.SunOS+=	EV_INOTIFY=0
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
