--- a/pkgtools/pkg_install/files/delete/Makefile.in
+++ b/pkgtools/pkg_install/files/delete/Makefile.in
@@ -15,7 +15,7 @@ SSL_SUPPORT=	@ssl_support@
 
 CC=		@CC@
 CCLD=		$(CC)
-LIBS=		-linstall -lfetch @LIBS@
+LIBS=		-linstall -lfetch -lnetpgpverify @LIBS@
 
 .if !empty(SSL_SUPPORT)
 LIBS+=		-lssl -lcrypto
